ADD little rotation effect to paddle

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ and open the template in the editor.
 <html>
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <link rel="stylesheet" type="text/css" href="./css.css">
+        <link rel="stylesheet" type="text/css" href="./style.css">
         <title>IceBreaker</title>
     </head>
     <body>
