Add new method for ball rotation + Minor graphics changes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@ and open the template in the editor.
         <script src="./js/lib/phaser.js"></script>
         
         <script src="./js/Texts.js"></script>
+        <script src="./js/utils/Tools.js"></script>
         
         <script src="./js/contexts/GameEngine.js"></script>
         <script src="./js/contexts/MenuScreenContext.js"></script>
