--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ and open the template in the editor.
         </div>
         <script src="./js/lib/phaser.js"></script>
         
-        <script src="./js/Texts.js"></script>
+        <script src="./js/utils/Texts.js"></script>
         <script src="./js/utils/Tools.js"></script>
         
         <script src="./js/contexts/GameEngine.js"></script>
