Split GameScreenContext out of GameEngine

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@ and open the template in the editor.
         
         <script src="./js/contexts/GameEngine.js"></script>
         <script src="./js/contexts/MenuScreenContext.js"></script>
+        <script src="./js/contexts/GameScreenContext.js"></script>
         
         <script src="./js/entities/Ball.js"></script>
         <script src="./js/entities/Brick.js"></script>
