ADD Button object for quite easy button creation + changed mainMenuScreen for level editor

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ and open the template in the editor.
         <script src="./js/utils/Constants.js"></script>
         <script src="./js/utils/Texts.js"></script>
         <script src="./js/utils/Tools.js"></script>
+        <script src="./js/utils/Button.js"></script>
         
         <script src="./js/contexts/GameEngine.js"></script>
         <script src="./js/contexts/MenuScreenContext.js"></script>
